<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/visitingCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F1EAFF"
            android:padding="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/companyLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/company_logo_desc"
                    android:src="@drawable/outline_ac_unit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/company_name"
                    android:textColor="@color/company_name_color"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/companyLogo"
                    app:layout_constraintEnd_toStartOf="@+id/companyLogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/companyLogo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginVertical="16dp"
                android:background="@color/separator_color" />

            <TextView
                android:id="@+id/employeeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/employee_name"
                android:textAlignment="center"
                android:textColor="@color/employee_name_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/job_title"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/job_title_color"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/contactInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/contact_info_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/address"
                    android:textColor="@color/contact_info_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"
                    android:textColor="@color/contact_info_color"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>